--- a/AdminApp/templates/base.html
+++ b/AdminApp/templates/base.html
@@ -88,7 +88,8 @@
                 <i class="fa fa-seedling"></i> Seeds
             </a>
             <div class="collapse submenu" id="seedsMenu">
-                <a href="seeds_list.html">View Seeds</a>
+                <a href="{% url 'View_Seeds' %}">View Seeds</a>
+                <a href="{% url 'Add_Seeds' %}">Add Seeds</a>
             </div>
 
             <!-- Farming Tools -->
