--- a/AdminApp/templates/View_Seeds.html
+++ b/AdminApp/templates/View_Seeds.html
@@ -50,12 +50,12 @@
                     </td>
 
                     <td>
-                        <a href="#"
+                        <a href="{% url 'Edite_seeds' s_id=seed.id %}"
                            class="btn btn-sm btn-primary">
                             <i class="fa fa-edit"></i> Edit
                         </a>
 
-                        <a href="#"
+                        <a href="{% url 'delete_Seeds' s_id=seed.id  %}"
                            class="btn btn-sm btn-danger"
                            onclick="return confirm('Are you sure you want to delete this seed?')">
                             <i class="fa fa-trash"></i> Delete
