create add and view of Farming Tools, models are also created

--- a/AdminApp/templates/base.html
+++ b/AdminApp/templates/base.html
@@ -97,8 +97,8 @@
                 <i class="fa fa-tools"></i> Farming Tools
             </a>
             <div class="collapse submenu" id="toolsMenu">
-                <a href="tools_list.html">View Tools</a>
-                <a href="add_tool.html">Add Tool</a>
+                <a href="{% url 'view_Farming_tools' %}">View Tools</a>
+                <a href="{% url 'Add_Farming_Tool' %}">Add Tool</a>
             </div>
 
             <!-- Harvest -->
